# AndroidGPU

./: LICENSE  README.md  settings.gradle
androidgpulib/: CMakeLists.txt  build.gradle
androidgpulib/src/androidTest/java/com/lib/androidgpulib/: ExampleInstrumentedTest.java
androidgpulib/src/main/cpp/: androidgpu.c  asset.c  asset.h  compiler.c  compiler.h  def.h  vulkan_wrapper.c  vulkan_wrapper.h
androidgpulib/src/main/java/com/lib/androidgpulib/: AndroidGPU.java
androidgpulib/src/test/java/com/lib/androidgpulib/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/lib/androidgpu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: compute.glsl
app/src/main/java/com/lib/androidgpu/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lib/androidgpu/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
